--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon Server/index.js",
     "dev": "webpack",
-    "deploy": "gcloud functions deploy envFunction --env-vars-file .env.yaml"
+    "deploy": "gcloud functions deploy envFunction --env-vars-file .env.yaml",
+    "lint": "eslint . --ext .js,.jsx --fix"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,15 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "cloudinary": "^1.24.0",
+    "cloudinary-react": "^1.6.8",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "express-form-data": "^2.0.14",
     "express-session": "^1.17.1",
     "file-loader": "^6.2.0",
     "moment": "^2.29.1",
@@ -49,9 +55,11 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "eslint": "^7.18.0",
+    "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
