--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.5.0",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1",
     "style-loader": "^2.0.0"
   },
   "devDependencies": {
