--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "passport-google-oauth": "^2.0.0",
     "passport-oauth": "^1.0.0",
     "react": "^17.0.1",
-    "react-component-whiteboard": "^1.1.1",
+    "react-bootstrap": "^1.5.0",
     "react-cloudinary-upload-widget": "^1.4.3",
+    "react-component-whiteboard": "^1.1.1",
     "react-dom": "^17.0.1",
     "react-geolocated": "^3.1.0",
     "react-google-button": "^0.7.2",
