--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Avengers-of-OpSpark/headstrong#readme",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
