--- a/package.json
+++ b/package.json
@@ -21,57 +21,63 @@
   },
   "homepage": "https://github.com/Avengers-of-OpSpark/headstrong#readme",
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
-    "@material-ui/core": "^4.11.3",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@devexpress/dx-react-chart": "^2.7.6",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.6",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
-    "cloudinary": "^1.24.0",
-    "cloudinary-react": "^1.6.8",
-    "cookie-parser": "^1.4.5",
+    "@mui/material": "^5.2.2",
+    "@mui/styled-engine": "^5.2.0",
+    "axios": "^0.24.0",
+    "cloudinary": "^1.27.1",
+    "cloudinary-react": "^1.7.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "css-loader": "^5.0.1",
-    "dotenv": "^8.2.0",
+    "css-loader": "^6.5.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "express-form-data": "^2.0.14",
-    "express-session": "^1.17.1",
+    "express-form-data": "^2.0.17",
+    "express-session": "^1.17.2",
     "file-loader": "^6.2.0",
     "moment": "^2.29.1",
-    "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-oauth": "^1.0.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-cloudinary-upload-widget": "^1.4.3",
     "react-component-whiteboard": "^1.1.1",
-    "react-dom": "^17.0.1",
-    "react-geolocated": "^3.1.0",
+    "react-dom": "^17.0.2",
+    "react-geolocated": "^3.2.0",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
-    "react-router-dom": "^5.2.0",
-    "sequelize": "^6.5.0",
-    "socket.io": "^3.1.1",
-    "socket.io-client": "^3.1.1",
-    "style-loader": "^2.0.0"
+    "react-router-dom": "^6.0.2",
+    "sequelize": "^6.11.0",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "babel-loader": "^8.2.3",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^4.3.8",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0"
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   }
 }
