--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "passport-oauth": "^1.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-chartjs-2": "^4.0.0",
     "react-cloudinary-upload-widget": "^1.4.3",
     "react-component-whiteboard": "^1.1.1",
     "react-dom": "^17.0.2",
