--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@mui/styled-engine": "^5.2.0",
+    "@mui/styles": "^5.2.2",
     "axios": "^0.24.0",
     "cloudinary": "^1.27.1",
     "cloudinary-react": "^1.7.0",
