--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "sequelize": "^6.11.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "tone": "^14.7.77"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
